# yuyinwang

./: .env.example  .gitignore  AGENT_USAGE_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  COMPONENT_DOCUMENTATION.md  DESIGN_TOKENS.md  DEVELOPER_GUIDE.md  FEATURE_VERIFICATION_REPORT.md  FIXES_SUMMARY.md  INSTALLATION-GUIDE.md  LICENSE  LocRecognizerManager.java  OPTIMIZATION_REPORT.md  PROJECT_MANAGEMENT.md  PROMPT_ACTIONS_IMPLEMENTATION_SUMMARY.md  PROMPT_ACTIONS_INTEGRATION_EXAMPLE.md  PROMPT_ACTIONS_QUICK_START.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_3.0.1.md  RELEASE_NOTES_5.5.1.md  RELEASE_NOTES_6.0.1.md  RELEASE_NOTES_v6.0.1.md  SECURITY.md  SHA256SUMS.txt  SHORTCUT_INJECTION_ANALYSIS.md  SHORTCUT_INJECTION_FIXES.md  SPOKENLY_IMPLEMENTATION_REPORT.md  SPOKENLY_IMPLEMENTATION_SUMMARY.md  START_DEV.md  TESTING_COMPLETE.md  USER_MANUAL.md  UX_IMPROVEMENTS.md  UX_IMPROVEMENTS_SUMMARY.md  VERIFICATION_REPORT.md  VOICE_INPUT_FIX.md  WINDOWS-DEPLOYMENT.md  api.md  (+21 more)
.claude/: CLAUDE.md  PROJECT_MANAGEMENT.md  README.md
docs/: MODEL_MANAGEMENT_SYSTEM.md  PERFORMANCE_CHECKLIST.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_README.md  PERFORMANCE_TESTING.md  SPOKENLY_FULL_REPLICATION_PLAN.md  architecture.md  development_20250806_204132.md  framer_motion_implementation.md  front-end-spec.md  luyinjiekou.md  prd.md  spokenly_issues_20250813.md  voice_input_fix_20250118.md  voice_input_fix_final_20250118.md  voice_input_fix_test.md  (+2 more)
mackey/: development.cer  (+1 more)
src-tauri/: CLAUDE.md  Cargo.toml  Cargo.toml.backup  Entitlements.plist  IMPLEMENTATION_COMPLETE.md  Info.plist  QUICK_START.md  QUICK_TEST_GUIDE.md  TESTING.md  TEST_SUITE_SUMMARY.md  build.rs  run_tests.sh  tauri.conf.json
src-tauri/docs/: DELIVERY_REPORT.md
src-tauri/icons/: icon.icns
src-tauri/releases/: Recording_King_v4.4.0_aarch64.dmg.sha256
src-tauri/src/: App.property.test.tsx  App.test.tsx  ai_agent_old.rs  audio_recorder.rs  database.rs  development_20250806_203942.rs  diagnostics.rs  errors.rs  folder_watcher.rs  lib.rs  main.rs  main_backup.rs  main_complex.rs  main_old.rs  performance_optimizer.rs  types.rs
src-tauri/src/ai/: content_analyzer.rs  mod.rs
src-tauri/src/ai_agent/: mod.rs  pipeline.rs  presets.rs  processors.rs  service.rs  smart_router.rs  types.rs
src-tauri/src/api/: mod.rs  transcription.rs
src-tauri/src/audio/: devices.rs  mod.rs  processor.rs  realtime_streamer.rs  recorder.rs  streaming_coordinator.rs  streaming_transcriptor.rs  visualization.rs
src-tauri/src/commands/: PROMPT_ACTIONS_README.md  audio_visualization.rs  content_analysis.rs  floating_assistant.rs  history.rs  history_test.rs  injection.rs  injection_test.rs  mod.rs  mode_management.rs  model_management.rs  models.rs  models_test.rs  permissions.rs  prompt_actions.rs  quick_input.rs  quick_input_test.rs  realtime_transcription.rs  recording.rs  recording_test.rs  settings.rs  settings_test.rs  shortcut_management.rs  shortcuts.rs  subtitle.rs  text_injection.rs  transcription.rs  unified_permissions.rs  unified_permissions_simple.rs  unified_shortcuts.rs  voice_input.rs
src-tauri/src/config/: settings.rs
src-tauri/src/core/: audio.rs  error.rs  global_listener.rs  injection.rs  local_whisper.rs  local_whisper_test.rs  mod.rs  shortcuts.rs  transcription.rs  types.rs  types_test.rs
src-tauri/src/database/: async_manager.rs  history_manager.rs  manager.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/features/history/: HistoryPage.test.tsx  HistoryPage.tsx
src-tauri/src/features/recording/: RecordingPage.property.test.tsx  RecordingPage.test.tsx  RecordingPage.tsx
src-tauri/src/features/settings/: SettingsPage.test.tsx  SettingsPage.tsx
src-tauri/src/network/: mod.rs  network_monitor.rs  transcription_mode_manager.rs
src-tauri/src/security/: command_executor.rs  mod.rs  path_validator.rs  secure_client.rs
src-tauri/src/services/: database.rs  mod.rs  quick_input.rs  state.rs
src-tauri/src/shared/components/: ErrorBoundary.test.tsx
src-tauri/src/shared/stores/: useAppStore.property.test.ts  useAppStore.test.ts  useAppStore.ts
src-tauri/src/shortcuts/: fn_key_listener.rs  global_shortcuts.rs  mod.rs  optimized_voice_shortcut.rs  progressive_trigger.rs  unified_shortcut_manager.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/subtitle/: formats.rs  generator.rs  mod.rs  time_sync.rs
src-tauri/src/system/: mod.rs  optimized_text_injector.rs  permission_manager.rs  progressive_text_injector.rs  text_injector.rs  unified_permission_manager.rs  unified_permission_manager_simple.rs  ux_monitor.rs
src-tauri/src/transcription/: api_client.rs  editor.rs  mod.rs  model_manager.rs  service.rs  whisper.rs
src-tauri/tests/: integration_tests.rs  test_utils.rs  test_utils_old.rs
(+314 files in other folders)
