[package]
name = "recording-king"
version = "6.0.1"
description = "Recording King - AI-powered speech-to-text desktop application"
authors = ["Recording King Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "fs-read-file", "dialog-open", "fs-remove-file", "dialog-message", "path-all", "fs-remove-dir", "dialog-ask", "fs-exists", "window-all", "dialog-confirm", "global-shortcut-all", "dialog-save", "fs-write-file", "fs-read-dir", "fs-create-dir", "shell-open", "global-shortcut", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
ringbuf = "0.3"
crossbeam-channel = "0.5"
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
hound = "3.5"
uuid = { version = "1.0", features = ["v4"] }
directories = "5.0"
parking_lot = "0.12"
chrono = "0.4"
futures-util = "0.3"
sysinfo = "0.30"
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"
whisper-rs = { version = "0.12", features = ["metal"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
notify = "5.0"
num_cpus = "1.16"
rdev = "0.5.3"
url = "2.5"
tempfile = "3.8"
# 音频解码和处理依赖
symphonia = { version = "0.5", features = ["all"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.11.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
async-trait = "0.1"
# FFT and audio analysis dependencies
rustfft = "6.1"
apodize = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
