[package]
name = "recording-king"
version = "6.0.1"
description = "Recording King - AI-powered speech-to-text desktop application"
authors = ["Recording King Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "os-all", "fs-read-file", "fs-remove-file", "path-all", "fs-remove-dir", "fs-exists", "window-all", "global-shortcut-all", "fs-write-file", "fs-read-dir", "fs-create-dir", "shell-open", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
ringbuf = "0.3"
crossbeam-channel = "0.5"
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
hound = "3.5"
uuid = { version = "1.0", features = ["v4"] }
directories = "5.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
sysinfo = "0.30"
cocoa = "0.25"
objc = "0.2"
whisper-rs = { version = "0.12", features = ["metal"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
notify = "5.0"
num_cpus = "1.16"
rdev = "0.5.3"
url = "2.5"
tempfile = "3.8"
symphonia = { version = "0.5", features = ["all"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
regex = "1.11.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
fs2 = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
