[package]
name = "recording-king"
version = "7.0.0"
description = "AI-Powered Voice Transcription Desktop App"
authors = ["Recording King Team"]
license = "MIT"
repository = "https://github.com/recording-king/recording-king"
edition = "2021"

[lib]
name = "recording_king"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "global-shortcut-all", "system-tray", "global-shortcut", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
rdev = "0.5"
base64 = "0.22"
urlencoding = "2.1"

# Audio
cpal = "0.15"
hound = "3.5"
ringbuf = "0.3"
rubato = "0.15"

# Local Whisper inference
whisper-rs = { version = "0.15", features = ["metal"] }

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
proptest = "1.4"
tempfile = "3.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
